# cursor-search-mcp

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/cursor_search_mcp/: __init__.py  auth.py  client.py  cursor_db.py  db.py  encryption.py  git_utils.py  messages.py  proto.py  server.py
