[project]
name = "cursor-search-mcp"
version = "0.1.0"
description = "MCP server for Cursor's semantic codebase search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "betterproto>=2.0.0b6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
cursor-search-mcp = "cursor_search_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_search_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]
