[project]
name = "cursor-search-mcp"
version = "0.1.0"
description = "MCP server for Cursor's semantic codebase search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.scripts]
cursor-search-mcp = "cursor_search_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_search_mcp"]
